<resources>
    <string name="app_name">NoSteroids</string>

    <string name="Exercises">Ćwieczenia</string>
    <string name="TrainingPlans">Plany Treningowe</string>
    <string name="Diets">Dieta/Plany Żywieniowe</string>
    <string name="Supplements">Suplementy</string>
    <string name="Calculators">Kalkulatory</string>
    <string name="Challenges">Wyzwania</string>
    <string name="Fbw">Full Body Workout</string>
    <string name="Chest">Klatka Piersiowa</string>
    <string name="Back">Plecy</string>
    <string name="Legs">Nogi</string>
    <string name="Biceps">Biceps</string>
    <string name="Triceps">Triceps</string>
    <string name="Shoulders">Barki</string>
    <string name="Abs">ABS</string>
    <string name="bPlay">Play</string>
    <string name="bPlay2">Play</string>
    <string name="bPlay3">Play</string>
</resources>
