<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_exercises"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mati.nosteroids.ExercisesActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bChest"
            android:text="@string/Chest"
            android:layout_weight="0.14" />

        <Button
            android:text="@string/Back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bBack"
            android:layout_weight="0.14" />

        <Button
            android:text="@string/Legs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bLegs"
            android:layout_weight="0.14" />

        <Button
            android:text="@string/Biceps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bBiceps"
            android:layout_weight="0.14" />

        <Button
            android:text="@string/Triceps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bTriceps"
            android:layout_weight="0.14" />

        <Button
            android:text="@string/Shoulders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bShoulders"
            android:layout_weight="0.14" />

        <Button
            android:text="@string/Abs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bAbs"
            android:layout_weight="0.14" />
    </LinearLayout>
</RelativeLayout>
