<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_biceps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mati.nosteroids.BicepsActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true">

            <view
                android:layout_width="match_parent"
                android:layout_height="250dp"
                class="com.google.android.youtube.player.YouTubePlayerView"
                android:id="@+id/ytChest" />

            <Button
                android:text="@string/bPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bPlay" />

            <view
                android:layout_width="match_parent"
                android:layout_height="300dp"
                class="com.google.android.youtube.player.YouTubePlayerView"
                android:id="@+id/ytChest2" />

            <Button
                android:text="@string/bPlay2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bPlay2" />

            <view
                android:layout_width="match_parent"
                android:layout_height="300dp"
                class="com.google.android.youtube.player.YouTubePlayerView"
                android:id="@+id/ytChest3" />

            <Button
                android:text="@string/bPlay3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bPlay3" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>



